@@ -10,6 +10,7 @@ Enhancements:
 
 Fixes:
 
+* Fix import vCard with Cyrillic encoding
 * Fix import/export vcard with birthday with year unknown
 * Fix contact missing create form
 
